Remove the dependency of paths on groups